<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="NETWORK_BUFFER" Id="{554c1ad3-989d-41be-8528-1577b12d8f01}">
    <Declaration><![CDATA[TYPE NETWORK_BUFFER :
STRUCT
	SIZE : UINT;
	BUFFER : ARRAY[0..Pecom_TCP_Puffer_Size] OF BYTE;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>