<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_MemberAnounce" Id="{36ec1b87-9937-480d-8158-a78cf6705d38}">
    <Declaration><![CDATA[TYPE ST_MemberAnounce :
STRUCT
	Laenge		:	WORD;
	receiver	:	WORD;
	Sender		:	WORD;
	Typ			:	WORD;
	Reserve		:	WORD;
	N_Laenge	:	WORD;
	Kommando	:	WORD;
END_STRUCT

END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>